src/examples/fail/missing_variable.c
//This will fail: 'e' is undefined

int i = 4;

return i + e;
